@@ -10,7 +10,7 @@ o [mouse] Fixing some OgreGui related graphical bugs
 - Moving MCL scrollbar when window's SB were moved is spurious 
 
 * i18n (source are taken alphabetically)
-- common/chartserie.cpp was the last translated source
+- common/curlaccountconfirmmail.cpp was the last translated source
 
 * OgreGui : GUI over Ogre3D based on QuadRenderer
 - gsServerList uses OgreGUI (with MulticolumnList)
@@ -110,7 +110,8 @@ A system that serialize widgets position and configuration
    Libraries versionning in doc/libVersionning.html and configure.in
 
 * v 0.0.5-191 (15 feb 2009 - ???)
-- (9) In common/ : chartserie.cpp, clientconnect.cpp and
+- (10) In common/ : curlaccountconfirmmail.cpp uses gettext
+- In common/ : chartserie.cpp, clientconnect.cpp and
    curlaccountadd are now ready to be translated
 - Number of translatable strings added to regtest statistics
 - common/chartline now ready to be translated
